--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-./src/__pycache__/
-./src/Widgets/__pycache__/
-./src/Variables/__pycache__/
+src/__pycache__/
+src/Widgets/__pycache__/
+src/Variables/__pycache__/
 
